<resources>
    <string name="app_name">parcial-1-am-acn4b-Segovia_Agustin-Forcada_Agustin</string>
    <string name="loginText">Iniciar sesion</string>
    <string name="textRegister">Registrate</string>
    <string name="bankName">BANCO DEL NORTE</string>
    <string name="welcomeText">Bienvenido</string>
    <string name="infoText">Saldo disponible</string>
    <string name="transactionsText">Transacciones Recientes</string>
    <string name="activityText1">Enviar</string>
    <string name="activityText2">Tarjeta de credito</string>
    <string name="activityText3">Recibir</string>
    <string name="activityText4">Prestamos</string>
    <string name="activityText5">Transferencia</string>
    <string name="activityText6">Plazo fijo</string>
    <string name="activityDescription1">Enviar Icono</string>
    <string name="activityDescription2">Tarjeta de credito Icono</string>
    <string name="activityDescription3">Recibir Icono</string>
    <string name="activityDescription4">Prestamos Icono</string>
    <string name="activityDescription5">Transferencia Icono</string>
    <string name="activityDescription6">Plazo fijo Icono</string>
    <string name="balanceText">$ 1.111,11</string>
    <string name="menuText">Menu</string>
    <string name="notificationText">Notificaciones</string>
    <string name="place_holder_password">Ingrese su contraseña</string>
    <string name="place_holder_login">Ingrese su mail o Usuario</string>
    <string name="priceTransaction3">$4500</string>
    <string name="infoTransaction3">Pringles Store</string>
    <string name="descriptionTransaction3">Icono de transaccion 3</string>
    <string name="priceTransaction2">$5000</string>
    <string name="infoTransaction2">Retiro de efectivo</string>
    <string name="descriptionTransaction">Icono de transaccion 2</string>
    <string name="priceTransaction1">$15220</string>
    <string name="infoTransaction1">Pago realizado</string>
    <string name="infoTransaction4">Pago realizado</string>
    <string name="infoTransaction5">Retiro de efectivo</string>
    <string name="infoTransaction6">Pringles Store</string>
    <string name="infoTransaction7">Pago realizado</string>
    <string name="infoTransaction8">Retiro de efectivo</string>
    <string name="infoTransaction9">Pringles Store</string>
    <string name="descriptionTransaction1">Icono de transaccion 1</string>
    <string name="descriptionTransaction4">Icono de transaccion 4</string>
    <string name="descriptionTransaction5">Icono de transaccion 5</string>
    <string name="descriptionTransaction6">Icono de transaccion 6</string>
    <string name="descriptionTransaction7">Icono de transaccion 7</string>
    <string name="descriptionTransaction8">Icono de transaccion 8</string>
    <string name="descriptionTransaction9">Icono de transaccion 9</string>
    <string name="back_menu">Volver</string>
    <string name="send_button">Enviar</string>
    <string name="add_amount">Ingrese monto</string>
    <string name="amount">Monto</string>
    <string name="reference_text">Mensaje de referencia</string>
    <string name="reason">Motivo</string>
    <string name="add_reference_text">Ingrese mensaje de referencia</string>
    <string name="select_reason">Seleccione motivo</string>
    <string name="select_account_destination">Seleccione cuenta de destino</string>
    <string name="select_account_destination_text">Seleccionar cuenta de destino</string>
    <string name="select_account_send">Seleccione cuenta de envio</string>
    <string name="select_account_send_text">Seleccionar cuenta de envio</string>
    <string name="button_complete">Realizar</string>
    <string name="button_simulate">Simular</string>
    <string name="show_value">Simular para ver el valor</string>
    <string name="total_amount">Monto total:</string>
    <string name="amount_interest">Monto por intereses generados:</string>
    <string name="interest_value">7.3%</string>
    <string name="interest">Interes:</string>
    <string name="account_selected">Seleccionar cuenta:</string>
    <string name="current_balance">Saldo actual:</string>
    <string name="option1Loans">$100.000 - 12 c/$12,000 - 44% int</string>
    <string name="option2Loans">$200.000 - 12 c/$27.000 - 62% int</string>
    <string name="option3Loans">$300.000 - 12 c/$43.000 - 72% int</string>
    <string name="option4Loans">$500.000 - 12 c/$75.000 - 80% int</string>
    <string name="loans">Prestamos</string>
    <string name="confirmed">Confirmar</string>
    <string name="select_loans">Seleccione el prestamo que desea recibir:</string>
    <string name="balance">Saldo:</string>
    <string name="alias_descript">banco.norte.rp</string>
    <string name="alias">Alias:</string>
    <string name="cbu_descript">08392390429</string>
    <string name="cbu">CBU:</string>
    <string name="account_name">Cuenta de</string>
    <string name="account_details">Detalle de Cuenta</string>
</resources>