<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="@dimen/iconMenuSize"
            android:layout_height="@dimen/iconMenuSize"
            android:layout_marginStart="14sp"
            android:background="@drawable/arrowleft"
            android:contentDescription="@string/back_menu" />

        <TextView
            android:id="@+id/bankName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="60dp"
            android:text="@string/bankName"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border_card_top"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="28sp"
        android:paddingEnd="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activityText3"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/account_details"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/account_name"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/cbu"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/cbu"
            android:layout_width="match_parent"
            android:text="@string/cbu_descript"
            android:textColor="@color/black"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:padding="14sp"
            android:background="@color/inputColor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/alias"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:background="@color/inputColor"
            android:text="@string/alias_descript"
            android:padding="14sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/balance"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/amount_total"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:autofillHints="number"
            android:background="@color/inputColor"
            android:ems="10"
            android:text="@string/balanceText"
            android:padding="14sp"
            android:textColor="@color/black" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>