<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_card">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_back"
            android:layout_width="@dimen/iconMenuSize"
            android:layout_height="@dimen/iconMenuSize"
            android:layout_marginStart="14sp"
            android:background="@drawable/arrowleft"
            android:contentDescription="@string/back_menu" />

        <TextView
            android:id="@+id/bankName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="60dp"
            android:text="@string/bankName"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/border_card_top"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="28sp"
        android:paddingEnd="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activityText1"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/select_account_send_text"
            android:textColor="@color/black"
            tools:textStyle="bold" />

        <Spinner
            android:id="@+id/account_send"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8sp"
            android:background="@color/inputColor" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/select_account_destination_text"
            android:textColor="@color/black"
            tools:textStyle="bold" />

        <Spinner
            android:id="@+id/account_destination"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:background="@color/inputColor" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/reason"
            android:textColor="@color/black"
            tools:textStyle="bold" />

        <Spinner
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:background="@color/inputColor" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/reference_text"
            android:textColor="@color/black"
            tools:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:autofillHints="text"
            android:background="@color/inputColor"
            android:ems="10"
            android:hint="@string/add_reference_text"
            android:inputType="text"
            android:padding="14sp"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/amount"
            android:textColor="@color/black"
            tools:textStyle="bold" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginTop="8sp"
            android:autofillHints="number"
            android:background="@color/inputColor"
            android:ems="10"
            android:hint="@string/add_amount"
            android:inputType="number"
            android:padding="14sp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:background="@drawable/border_card_total"
            android:gravity="center"
            android:text="@string/send_button"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>